(env
 (dev
  (flags (:standard
          -strict-formats  ;; Disallows legacy formats.
          -strict-sequence ;; Enforces the lhs of a sequence to have type `unit'.
          -safe-string     ;; Immutable strings.
          -annot           ;; Dumps information per (file) module about types, bindings, tail-calls, etc. Used by some tools.
          -warn-error -a   ;; Do not treat warnings as errors.
          -w A-4-44-45-60  ;; Ignores warnings 4, 44, 45, and 60.
          -g               ;; Adds debugging information to the resulting executable / library.
         )))
 (release
  (flags (:standard
          ;; The following flags are the same as for the "dev" profile.
          -strict-formats -strict-sequence -safe-string -annot
          -warn-error @A   ;; Treat warnings as errors...
          -w A-4-44-45-60  ;; ... except for warnings 4, 44, 45, and 60 which are ignored.
          ))
  (ocamlopt_flags (:standard
                   -O3 ;; Applies (aggressive) optimisations to the resulting executable.
                  ))))

(install
 (package links)
 (section doc)
 (files (INSTALL.md as README)))

(include install.inc)
