
;; Warnings we deliberately ignore:
;; 4 : Fragile pattern matching
;; 29: unescaped end-of-line in a string constant
;; 44: "open" shadows an identifer
;; 45: "open" shadows a constructor
;; 50: ambiguous or unnattached docstring
;; 60: unused module


(env
 (dev
  (flags (:standard
          -strict-formats          ;; Disallows legacy formats.
          -strict-sequence         ;; Enforces the lhs of a sequence to have type `unit'.
          -safe-string             ;; Immutable strings.
          -annot                   ;; Dumps information per (file) module about types, bindings, tail-calls, etc. Used by some tools.
          -warn-error -a           ;; Do not treat warnings as errors.
          -w A-4-29-44-45-50-60    ;; Ignores warnings 4, 44, 45, and 60.
          -g                       ;; Adds debugging information to the resulting executable / library.
;;          -dsource
         )))
 (release
  (flags (:standard
          ;; The following flags are the same as for the "dev" profile.
          -strict-formats -strict-sequence -safe-string -annot
          -warn-error @A           ;; Treat warnings as errors...
          -w A-4-29-44-45-50-60    ;; ... except for warnings we specifically ignore.
          ))
  (ocamlopt_flags (:standard
                   -O3 ;; Applies (aggressive) optimisations to the resulting executable.
                  ))))

(install
 (package links)
 (section doc)
 (files (INSTALL.md as README)))

(include install.inc)
