opam-version: "1.2"
name: "links-core"
version: "0.7.2"
maintainer: "Jan Stolarek <jan.stolarek@ed.ac.uk>"
authors: "The Links Team <links-dev@inf.ed.ac.uk>"
homepage: "http://www.links-lang.org"
dev-repo: "https://github.com/links-lang/links.git"
bug-reports: "https://github.com/links-lang/links/issues"
license: "GPL-2"

available: [
  ocaml-version >= "4.04.0"
]

build: [
  [ "jbuilder" "subst" "-n" name ] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]

install: [
]

remove: [
  [ "rm" "-rf" "%{links-core:lib}%"            ]
  [ "rm" "-rf" "%{links-core:share}%/examples" ]
  [ "rm" "-rf" "%{links-core:etc}%/config"     ]
  [ "rm" "-rf" "%{links-core:doc}%/README"     ]
]

depends: [
  "ocamlfind" {build}
  "deriving" {build}
  "cgi"
  "base64"
  "linenoise"
  "ANSITerminal"
  "lwt"
  "cohttp"
  "websocket-lwt"
  "safepass"
]