opam-version: "1.2"
name: "links-lib"
version: "0.7.2"
maintainer: "Jan Stolarek <jan.stolarek@ed.ac.uk>"
authors: "The Links Team <links-dev@inf.ed.ac.uk>"
homepage: "http://www.links-lang.org"
dev-repo: "https://github.com/links-lang/links.git"
bug-reports: "https://github.com/links-lang/links/issues"
license: "GPL-2"

available: [
  ocaml-version >= "4.04.0"
]

build: [
  [ "jbuilder" "subst" "-n" name ] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocamlfind" {build}
  "deriving" {build}
  "cgi"
  "base64"
  "linenoise"
  "ANSITerminal"
  "lwt"
  "cohttp"
  "websocket-lwt"
  "safepass"
]