opam-version: "1.2"
name: "links-postgresql"
maintainer: "Simon Fowler <simon.fowler@ed.ac.uk>"
authors: "The Links Team <links-dev@inf.ed.ac.uk>"
homepage: "http://www.links-lang.org"
dev-repo: "https://github.com/links-lang/links.git"
bug-reports: "https://github.com/links-lang/links/issues"
license: "GPL-2"

available: [
  ocaml-version >= "4.04.0"
]

build: [
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]

depends: [
  "jbuilder" {build}
  "postgresql"
  "links"
]
