opam-version: "2.0"
maintainer: "Jan Stolarek <jan.stolarek@ed.ac.uk>"
authors: "The Links Team <links-dev@inf.ed.ac.uk>"
synopsis: "SQLite database driver for the Links Programming Language"
description: "SQLite database driver for the Links Programming Language"
homepage: "https://github.com/links-lang/links"
dev-repo: "git+https://github.com/links-lang/links.git"
bug-reports: "https://github.com/links-lang/links/issues"
license: "GPL-2"

build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "1.10.0"}
  "sqlite3"
  "links"
]
