opam-version: "2.0"
maintainer: "Simon Fowler <simon.fowler@ed.ac.uk>"
authors: "The Links Team <links-dev@inf.ed.ac.uk>"
synopsis: "The Links Programming Language"
homepage: "https://github.com/links-lang/links"
dev-repo: "git+https://github.com/links-lang/links.git"
bug-reports: "https://github.com/links-lang/links/issues"
license: "GPL-2"


build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "exec" "preinstall/preinstall.exe" "--" "-libdir" links:lib ]
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {build}
  "ppx_deriving"
  "ppx_deriving_yojson"
  "base64"
  "linenoise"
  "ANSITerminal"
  "lwt" {>= "3.1.0"}
  "cohttp"
  "websocket-lwt"
  "safepass"
  "ocamlfind"
  "menhir"
]
