opam-version: "2.0"
maintainer: "Simon Fowler <simon.fowler@ed.ac.uk>"
authors: "The Links Team <links-dev@inf.ed.ac.uk>"
synopsis: "The Links Programming Language"
description: "Links is a functional programming language designed to make web programming easier."
homepage: "https://github.com/links-lang/links"
dev-repo: "git+https://github.com/links-lang/links.git"
bug-reports: "https://github.com/links-lang/links/issues"
license: "GPL-2"
version: "0.9.1"


build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "exec" "preinstall/preinstall.exe" "--" "-libdir" _:lib ]
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "1.10.0"}
  "ppx_deriving"
  "ppx_deriving_yojson" {>= "3.3"}
  "base64"
  "linenoise"
  "ANSITerminal"
  "lwt" {>= "3.1.0"}
  "cohttp"
  "cohttp-lwt"
  "cohttp-lwt-unix"
  "conduit-lwt-unix"
  "uri"
  "websocket"
  "websocket-lwt-unix"
  "safepass"
  "result"
  "ocamlfind"
  "menhir"
]
