opam-version: "2.0"
maintainer: "Daniel Hillerström <daniel.hillerstrom@ed.ac.uk>"
authors: "The Links Team <links-dev@inf.ed.ac.uk>"
synopsis: "The Links Programming Language"
description: "Links is a functional programming language designed to make web programming easier."
homepage: "https://github.com/links-lang/links"
dev-repo: "git+https://github.com/links-lang/links.git"
bug-reports: "https://github.com/links-lang/links/issues"
license: "GPL-3.0-only"


build: [
  [ "dune" "exec" "preinstall/preinstall.exe" "--" "-libdir" _:lib ]
  [ make "opam-build-links.opam" ]
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.7"}
  "ppx_deriving"
  "ppx_deriving_yojson" {>= "3.3"}
  "base64"
  "linenoise"
  "ANSITerminal"
  "lwt" {>= "5.0.0"}
  "cohttp"
  "cohttp-lwt"
  "cohttp-lwt-unix"
  "conduit-lwt-unix"
  "uri"
  "tls"
  "websocket"
  "websocket-lwt-unix"
  "safepass"
  "result"
  "ocamlfind"
  "menhir" {>= "20210419"}
  "ppx_sexp_conv" {<= "v0.15.1"}
  "calendar" {>= "2.0.4"}
]
