

(library
  (name links_compiler)
  (public_name links.compiler)
  (synopsis "Links compiler library")
  (modes native)
  (libraries str yojson ppx_deriving_yojson.runtime unix safepass base64 ANSITerminal linenoise cohttp lwt websocket websocket-lwt.cohttp findlib links.core ocaml-compiler-libs.common ocaml-compiler-libs.bytecomp compiler-libs.optcomp)
  (preprocess (pps ppx_deriving.std ppx_deriving_yojson)))


