(ocamllex
  (modules jsonlex lexer xmlLexer))

(menhir
  (modules parser jsonparse xmlParser)
  (flags "--table") ;; slower parser, but compilation *much* faster
)

(library
  (name links_core)
  (public_name links.core)
  (synopsis "Links compiler library")
  (modes native)
  (libraries str yojson ppx_deriving_yojson.runtime unix safepass base64
             ANSITerminal linenoise cohttp lwt websocket websocket-lwt.cohttp
             findlib menhirLib)
  (preprocess (pps ppx_deriving.std ppx_deriving_yojson)))

;; Make Lens modules available.
(copy_files# lens/*.ml)
(copy_files# lens/*.mli)
