(ocamllex
  (modules lexer xmlLexer timestampLexer))

(menhir
  (modules parser xmlParser timestampParser)
  (flags "--table") ;; slower parser, but compilation *much* faster
)

(library
  (name links_core)
  (public_name links.core)
  (synopsis "Links compiler library")
  (modes native)
  (libraries str linenoise base64 safepass unix result
             yojson ppx_deriving_yojson.runtime
             lwt lwt.unix
             cohttp cohttp-lwt-unix cohttp-lwt
             conduit-lwt-unix uri
             websocket websocket-lwt-unix.cohttp
             findlib menhirLib links.lens calendar
             dynlink)
  (preprocess (pps ppx_deriving.std ppx_deriving_yojson)))


;; Generate the Linkspath module.
(rule
  (targets linkspath.ml)
  (deps (:gen ../linkspath/gen_linkspath.exe))
  (action (run %{gen} -o %{targets})))

;; Make Query modules available.
(copy_files# query/*.ml)
(copy_files# query/*.mli)
