(ocamllex
  (modules lexer))

(menhir
  (modules parser)
  (flags "--table") ;; slower parser, but compilation *much* faster
)


(library
  (name links_frontend)
  (public_name links.frontend)
  (synopsis "Links frontend library")
  (modes native)
  (libraries str linenoise
             yojson ppx_deriving_yojson.runtime
             menhirLib
             links.lens links.core)
  (preprocess (pps ppx_deriving.std ppx_deriving_yojson)))
