

(library
  (name links_middleend)
  (public_name links.middleend)
  (synopsis "Links middle-end library")
  (modes native)
  (libraries str linenoise base64 safepass unix result
             yojson ppx_deriving_yojson.runtime
             lwt lwt.unix
             cohttp cohttp-lwt-unix cohttp-lwt
             conduit-lwt-unix uri
             websocket websocket-lwt-unix.cohttp
             findlib menhirLib links.lens links.core links.frontend links.backend)
  (preprocess (pps ppx_deriving.std ppx_deriving_yojson)))
