

(library
  (name links_middleend)
  (public_name links.middleend)
  (synopsis "Links middle-end library")
  (modes native)
  (libraries str
             yojson ppx_deriving_yojson.runtime
             links.lens links.core links.frontend links.backend)
  (preprocess (pps ppx_deriving.std ppx_deriving_yojson)))
