

(library
  (name links_middle_end)
  (public_name links.middle-end)
  (synopsis "Links middle-end library")
  (modes native)
  (libraries str
             yojson ppx_deriving_yojson.runtime
             links.lens links.core links.frontend links.backend)
  (preprocess (pps ppx_deriving.std ppx_deriving_yojson)))
