
(ocamllex
  (modules xmlLexer))

(menhir
  (modules xmlParser)
  (flags "--table") ;; slower parser, but compilation *much* faster
)


(library
  (name links_runtime)
  (public_name links.runtime)
  (synopsis "Links runtime library")
  (modes native)
  (libraries str safepass result
             yojson ppx_deriving_yojson.runtime
             lwt lwt.unix
             cohttp cohttp-lwt-unix cohttp-lwt
             conduit-lwt-unix uri
             websocket websocket-lwt-unix.cohttp
             findlib menhirLib links.lens links.core links.frontend links.backend)
  (preprocess (pps ppx_deriving.std ppx_deriving_yojson)))
