(library
 (name links_expect_page)
 (libraries base core core_kernel ppx_expect.payload
   links_expect
   ppx_expect.config ppx_expect.config_types
   ppx_expect.common ppx_expect.evaluator
   ppx_expect.matcher ppx_inline_test
   ppx_inline_test.config async_unix)
 (inline_tests)
 (preprocess (pps ppx_expect)))
